--- a/secrets.toml.example
+++ b/secrets.toml.example
@@ -1,6 +1,5 @@
-# rename to .secrets.toml
 [bot]
-token = "123"
+token = "TOKEN"
 
 [bot.fsm]
 data_bucket = 'fsm_data_aiogram'
@@ -18,3 +17,5 @@ adapter = 'asyncpg'
 username = 'username'
 password = 'password'
 host = 'localhost:5432'
+pool_size = 10
+max_overflow = 10
