--- a/secrets.toml.example
+++ b/secrets.toml.example
@@ -6,16 +6,16 @@ data_bucket = 'fsm_data_aiogram'
 states_bucket = 'fsm_states_aiogram'
 
 [nats]
-dsn = "nats://localhost:4222"
+dsn = "nats://nats"
 
 [redis]
-dsn = "redis://localhost:6379/0"
+dsn = "redis://redis/0"
 
 [db]
 db_name = 'bot'
 adapter = 'asyncpg'
 username = 'username'
 password = 'password'
-host = 'localhost:5432'
+host = 'postgres'
 pool_size = 10
 max_overflow = 10
