--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "fluentogram>=1.1.10",
     "nats-py>=2.9.0",
     "orjson>=3.10.15",
-    "redis>=5.2.1",
+    "redis[asyncio]>=5.2.1",
     "sqlalchemy[asyncio]>=2.0.38",
     "structlog>=25.1.0",
 ]
@@ -23,4 +23,5 @@ dependencies = [
 dev = [
     "mypy>=1.15.0",
     "ruff>=0.9.7",
+    "types-redis>=4.6.0.20241004",
 ]
