Added typing to providers

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,7 @@ show_error_codes = True
 ignore_missing_imports = True
 follow_imports = silent
 incremental = True
+
+
+[mypy-bot.core.providers.*]
+disable_error_code = type-arg, attr-defined
