Added ignore for mypy generating stub file internationalisation

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,6 +5,8 @@ ignore_missing_imports = True
 follow_imports = silent
 incremental = True
 
+[mypy-i18n.stub]
+disable_error_code = type-arg, attr-defined, no-untyped-def
 
 [mypy-bot.core.providers.*]
 disable_error_code = type-arg, attr-defined
