Added typing to middlewares

--- a/mypy.ini
+++ b/mypy.ini
@@ -10,3 +10,6 @@ disable_error_code = type-arg, attr-defined, no-untyped-def
 
 [mypy-bot.core.providers.*]
 disable_error_code = type-arg, attr-defined
+
+[mypy-bot.core.middlewares.*]
+disable_error_code = override
