Added typing to all project

--- a/mypy.ini
+++ b/mypy.ini
@@ -13,3 +13,6 @@ disable_error_code = type-arg, attr-defined
 
 [mypy-bot.core.middlewares.*]
 disable_error_code = override
+
+[mypy-logs.startup]
+ignore_errors = True
